# lzc-turtle

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  lzc-build.dev.yml  lzc-build.yml  lzc-manifest.yml  package.yml
.github/workflows/: ci.yml
deploy/: build.sh  config.example.toml  docker-entrypoint.sh
docs/: api-contract.md
docs/lzc-dev-skill/: SKILL.md
server/: Cargo.toml
server/src/: config.rs  db.rs  error.rs  main.rs
server/src/auth/: mod.rs  oidc.rs
server/src/routes/: drawings.rs  mod.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  examples.ts  styles.css
ui/src/api/: client.ts
ui/src/components/: GalleryDrawer.tsx  LoginPage.tsx  SaveDialog.tsx  TurtleCanvas.tsx
ui/src/pages/: EditorPage.tsx
ui/src/turtle/: execute.ts  index.ts  lexer.ts  parser.ts  types.ts
